# ChemRefine

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  INSTALL.md  LICENSE  README.md  auto_goat.py  index.html  main.py  mkdocs.yml  pyproject.toml  test_trj.xyz
ChemRefine/: __init__.py  core.py  file_submission.py  orca_interface.py  parse.py  refine.py
Examples/: autogoat.slurm  chemrefine.slurm  input.yaml  orca.slurm  step1.inp  step2.inp  step3.inp
Examples/Templates/: chemrefine.slurm  cpu.slurm.header  mlff.slurm.header  orca.slurm.header  step1.inp  step2.inp
Examples/Tutorials/Conformational Sampling/: input.yaml
Examples/Tutorials/Conformational Sampling/templates/: step1.inp
Examples/Tutorials/Conformational-Sampling/: input.yaml  step1.xyz
Examples/Tutorials/Conformational-Sampling/templates/: cpu.slurm.header  cuda.slurm.header  step4.inp  step5.inp
Examples/Tutorials/Host-Guest/: input.yaml  step1.xyz
Examples/Tutorials/Host-Guest/templates/: cl.xyz  step1.inp  step3.inp  step4.inp  step5.inp
Examples/Tutorials/MLIPTraining/: input.yaml  step1.xyz
Examples/Tutorials/MLIPTraining/templates/: step1.inp  step1.xyz  step2.inp  step3.inp  step4.inp  step5.inp
Examples/Tutorials/Redox/: input.yaml
Examples/Tutorials/Redox/Amines/: input.yaml
Examples/Tutorials/Redox/Amines/templates/: cpu.slurm.header  cuda.slurm.header  oxidation_smiles.csv  step1.inp  step2.inp  step4.inp  step5.inp  step6.inp
Examples/Tutorials/Redox/dimethylaniline/: step1.xyz
Examples/Tutorials/Redox/dimethylaniline/templates/: cpu.slurm.header  step2.inp
Examples/Tutorials/Redox/templates/: step3.inp  step6.inp  step8.inp
Examples/Tutorials/Spin/Spin/benzophenone/: input.yaml
Examples/Tutorials/Spin/Spin/benzophenone/template/: step1.xyz  step4.inp  step7.inp
Examples/Tutorials/Spin/Spin/heme_catalyst/: input.yaml
Examples/Tutorials/Spin/Spin/heme_catalyst/templates/: step1.xyz  step2.inp  step3.inp
Examples/Tutorials/Spin/benzophenone/: spin.xyz
Examples/Tutorials/Spin/benzophenone/template/: step2.inp  step3.inp  step6.inp
Examples/Tutorials/Spin/heme_catalyst/: heme.xyz
Examples/Tutorials/Spin/heme_catalyst/templates/: step1.inp  step5.inp  step6.inp
Examples/Tutorials/Transition-State/: input.yaml  step1.xyz
Examples/Tutorials/Transition-State/templates/: step1.inp  step2.inp  step3.inp  step4.inp
INSTALL/: index.html
LICENSE/: index.html
chemrefine/: __init__.py  constants.py  core.py  file_submission.py  mlff.py  mlff_runner.py  mlip.py  orca_interface.py  parse.py  refine.py  test.out  utils.py
chemrefine/tests/: test_chemrefiner_submit.py  test_init.py  test_interface.py  test_mlff.py  test_refine.py  test_submitter.py  test_utils.py
chemrefine/tests/data/: orca.out
docs/: INSTALL.md  home.md  index.md
docs/tutorial/: conformer_sampling.md  host-guest.md  index.md  mlip_training.md
docs/tutorials/: conformer_sampling.md  host-guest.md  index.md  mlip_training.md  redox.md  spin.md  ts_finding.md
home/: index.html
search/: search_index.json
src/autogoat/: __init__.py  auto_goat.py
src/chemrefine/: __init__.py  cache_utils.py  client.py  constants.py  core.py  mlff.py  mlff_runner.py  mlff_server.py  orca_interface.py  parse.py  refine.py  run_mlff.sh  server.py  uma.sh  utils.py  utils_extopt.py
src/chemrefine/tests/: test_chemrefiner_parse.py  test_mlff.py  test_orca_submitter.py  test_parse.py
tests/: test_chemrefiner_parse.py  test_chemrefiner_submit.py  test_mlff.py  test_orca_submitter.py  test_parse.py
tutorial/: index.html
tutorial/conformer_sampling/: index.html
tutorial/host-guest/: index.html
tutorial/install/: index.html
tutorial/mlip_training/: index.html
tutorial/oxidation/: index.html
tutorial/spin/: index.html
tutorial/ts_finding/: index.html
tutorials/: index.html
tutorials/conformer_sampling/: index.html
tutorials/host-guest/: index.html
tutorials/mlip_training/: index.html
tutorials/redox/: index.html
tutorials/spin/: index.html
tutorials/ts_finding/: index.html
