[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ChemRefine"
version = "1.2.9"  # bump this each release
description = "An automated and interoperable manager for computational chemistry workflows."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Sterling Group", email = "ignaciomigliaro@outlook.com"},
]
keywords = [
    "computational chemistry",
    "conformer sampling",
    "ORCA",
    "molecular dynamics",
    "quantum chemistry",
    "automation",
    "HPC"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "pyyaml",
    "pandas>=1.5",
    "ase>=3.25.0",
    "mace-torch>=0.3.14",
    "scikit-learn>=1.3",
    "e3nn==0.4.4",
    "waitress",
    "requests",
    "flask",
    "torch<=2.5.1",
    "fairchem-core @ git+https://github.com/sterling-group/fairchem-patched.git@main#subdirectory=packages/fairchem-core"

]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/sterling-research-group/ChemRefine"
Documentation = "https://github.com/sterling-research-group/ChemRefine/blob/main/README.md"
Repository = "https://github.com/sterling-research-group/ChemRefine.git"
Issues = "https://github.com/sterling-research-group/ChemRefine/issues"

[project.scripts]
chemrefine = "chemrefine.core:main"
chemrefine-mlff = "chemrefine.mlff_runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chemrefine"]

[tool.hatch.build.targets.sdist]
include = [
    "src/chemrefine",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\\.pyi?$'
extend-exclude = '''
/(
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
  | vendor
)/
'''

[tool.pytest.ini_options]
testpaths = ["src/chemrefine/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "vendor/",
    "build/",
    "dist/",
]

[tool.setuptools.package-data]
"chemrefine" = ["run_mlff.sh"]
